--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,9 @@
     <string name="enter_the_name">Enter the name</string>
     <string name="enter_the_value">Enter the value</string>
     <string name="enter_the_description_optional">Enter the Description (optional)</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
     <string name="statistics">Statistics</string>
     <string name="list">List</string>
     <string name="profile">Profile</string>
+    <string name="add_new">Add New</string>
 </resources>
